Solved Wrap isue

--- a/app/assets/stylesheets/project_index_show.css
+++ b/app/assets/stylesheets/project_index_show.css
@@ -3,14 +3,16 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  flex-wrap: wrap;
 }
 
-.all-projects-div ul li {
+/*.all-projects-div ul li {
   list-style-type: none;
-}
+}*/
 
 .featured-project-div {
   /*@media or css grid*/
+
 }
 
 .featured-project-div img {
